# tebesabot

./: .env.txt  .gitignore  1. requirements.txt.txt  10. apiwebhook.py.py  11. .githubworkflowsdeploy.yml.yaml  12. README.md.md  3. vercel.json.json  4. srcconfigsettings.py.py  5. srcdatabasesupabase_client.py.py  6. srcdatabasemodels.py.sql  7. srcbotutilscompression.py .py  8. srcbotutilsai_verification.py (2).py  9. srcbothandlersadmin.py.py  Configure environment.sh  README.md  main.py  requirements.txt
api/: webhook.py
src/: __init__.py
src/bot/handlers/: matching.py  payment.py
src/bot/keyboards/: menus.py
src/config/: __init__.py
src/config/src/config/: settings.py
src/config/src/config/src/database/: __init__.py
src/config/src/config/src/database/src/database/: supabase_client.py
src/database/: models.sql
src/database/src/bot/: __init__.py
src/database/src/bot/src/bot/: main.py
src/database/src/bot/src/bot/src/bot/handlers/: __init__.py
src/database/src/bot/src/bot/src/bot/handlers/src/bot/handlers/: registration.py
src/database/src/bot/src/bot/src/bot/handlers/src/bot/handlers/src/bot/handlers/src/bot/handlers/src/bot/handlers/: admin.py
src/database/tests/: __init__.py
src/database/tests/tests/: test_bot.py
src/database/tests/tests/tests/: test_database.py
src/database/tests/tests/tests/scripts/: setup.sh
src/database/tests/tests/tests/scripts/scripts/: .pre-commit-config.yaml  Dockerfile  Makefile  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt
src/services/: notification.py
(+4 files in other folders)
