[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habesha-dating-bot"
version = "1.0.0"
description = "Telegram dating bot for Habesha community"
authors = [
    {name = "Habesha Dating Team", email = "info@habeshadating.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot>=20.7",
    "supabase>=2.0.3",
    "Pillow>=10.1.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]